--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <p oneclick="">hello world</p>
+    <p oneclick="">hello world!</p>
     
 <!--     <script>
         alert(1)
